feat: add underlying_currency to /vaults
